samples/_failures_safe/1761477702_e654b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ccf9efa3.c: In function ‘main’:
./samples/SAFE/__tmp_ccf9efa3.c:159:24: error: missing terminating " character
  159 |                 printf("Error: Cannot
      |                        ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_ccf9efa3.c:159:17: error: expected expression at end of input
  159 |                 printf("Error: Cannot
      |                 ^~~~~~
./samples/SAFE/__tmp_ccf9efa3.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ccf9efa3.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ccf9efa3.c:159:17: error: expected declaration or statement at end of input
